Use master makefile

--- a/blog/Makefile
+++ b/blog/Makefile
@@ -1,18 +1,21 @@
 include config.mk
 
-.PHONY: all package clean
+.PHONY: all clean
 
-all: $(PAGES)
+all: $(PAGES) $(FEEDS)
 
 clean:
-	rm -f $(PAGES) $(NAME).tar.gz
+	rm -f $(PAGES) $(FEEDS)
 
-.SUFFIXES: .md .html
+.SUFFIXES: .md .html .xml
 
 HEADER = ../html/head.html
 TITLE  = title.html
 FOOTER = ../html/foot.html
 
-.md.html: $(HEADER) $(FOOTER)
+$(FEEDS): index.md
+	./feeds.sh $< > $@
+
+.md.html: $(HEADER) $(TITLE) $(FOOTER)
 	@echo "MARKDOWN: `basename $@`"
 	@$(MD) $< | cat $(HEADER) $(TITLE) - $(FOOTER) > $@
