--- a/contact/Makefile
+++ b/contact/Makefile
@@ -1,11 +1,11 @@
 include config.mk
 
-.PHONY: all package clean
+.PHONY: all clean
 
 all: $(PAGES)
 
 clean:
-	rm -f $(PAGES) $(NAME).tar.gz
+	rm -f $(PAGES)
 
 .SUFFIXES: .md .html
 
@@ -13,6 +13,6 @@ HEADER = ../html/head.html
 TITLE  = title.html
 FOOTER = ../html/foot.html
 
-.md.html: $(HEADER) $(FOOTER)
+.md.html: $(HEADER) $(TITLE) $(FOOTER)
 	@echo "MARKDOWN: `basename $@`"
 	@$(MD) $< | cat $(HEADER) $(TITLE) - $(FOOTER) > $@
