--- a/blog/Makefile
+++ b/blog/Makefile
@@ -10,12 +10,11 @@ clean:
 .SUFFIXES: .md .html .xml
 
 HEADER = ../html/head.html
-TITLE  = title.html
 FOOTER = ../html/foot.html
 
 $(FEEDS): index.md
 	./feeds.sh $< > $@
 
-.md.html: $(HEADER) $(TITLE) $(FOOTER)
+.md.html: $(HEADER) $(FOOTER)
 	@echo "MARKDOWN: `basename $@`"
-	@$(MD) $< | cat $(HEADER) $(TITLE) - $(FOOTER) > $@
+	@$(MD) $< | cat $(HEADER) - $(FOOTER) > $@
