Just use nginx to add header and footer

--- a/blog/Makefile
+++ b/blog/Makefile
@@ -9,12 +9,9 @@ clean:
 
 .SUFFIXES: .md .html .xml
 
-HEADER = ../html/head.html
-FOOTER = ../html/foot.html
-
 $(FEEDS): index.md
 	./feeds.sh $< > $@
 
-.md.html: $(HEADER) $(FOOTER)
+.md.html:
 	@echo "MARKDOWN: `basename $@`"
-	@$(MD) $< | cat $(HEADER) - $(FOOTER) > $@
+	@$(MD) $< | cat - > $@
